--- a/demo1.html
+++ b/demo1.html
@@ -277,10 +277,7 @@ background: #FFF;" type="button" data-bs-toggle="dropdown" aria-expanded="false"
           </svg>
       </button>
         </div>
-
          <div class="m-auto">
-
-       
         <div class="listing-map">
           <div class="listing-item">
             <div class="book-gallery">
@@ -484,7 +481,7 @@ background: #FFF;" type="button" data-bs-toggle="dropdown" aria-expanded="false"
     </div>
 </section>
  
- <div id="footer"></div>
+ <div id="footer" style="position: relative; z-index: 1;"></div>
    <script src="js/maptest.js"></script>
     <script src="js/jquery-3.7.1.js"></script>
   <script src="./js/headerFooter.js"></script>
@@ -639,7 +636,69 @@ window.addEventListener("scroll", function () {
       ({ key: "AIzaSyCOw87eJaP-4vV_kWiycPExCaPasiudSYg", v: "weekly" });
 </script>
 
+<script>
+// Select the element to transform
+const leftMap = document.querySelector('.left-Map');
 
+// Variable to keep track of the starting position and current transform state
+let startY = 0;
+let initialTransform = 0;
+let isDragging = false;
+
+// Function to handle touch start
+function handleTouchStart(event) {
+  // Get the initial touch position and current transform
+  startY = event.touches[0].clientY;
+  const transformMatrix = window.getComputedStyle(leftMap).transform;
+  if (transformMatrix !== 'none') {
+    initialTransform = parseFloat(transformMatrix.split(',')[5]);
+  } else {
+    initialTransform = 0;
+  }
+  isDragging = true;
+  // Remove the transition for real-time dragging
+  leftMap.style.transition = 'none';
+}
+
+// Function to handle touch move
+function handleTouchMove(event) {
+  if (!isDragging) return;
+
+  // Calculate the movement difference
+  const currentY = event.touches[0].clientY;
+  const deltaY = currentY - startY;
+
+  // Translate the element based on the movement
+  const newTransform = initialTransform + deltaY;
+
+  // Ensure the element doesn't go beyond the set limits
+  if (newTransform >= 0 && newTransform <= window.innerHeight * 0.7) {
+    leftMap.style.transform = `translateY(${newTransform}px)`;
+  }
+}
+
+// Function to handle touch end
+function handleTouchEnd() {
+  isDragging = false;
+  // Add the transition for smooth snapping
+  leftMap.style.transition = 'transform 0.3s ease';
+  
+  // Determine the final position
+  const currentTransform = parseFloat(leftMap.style.transform.match(/translateY\((.*?)px\)/)[1]);
+  const midpoint = window.innerHeight * 0.35;
+  if (currentTransform > midpoint) {
+    leftMap.style.transform = 'translateY(70vh)';
+  } else {
+    leftMap.style.transform = 'translateY(0vh)';
+  }
+}
+
+// Add event listeners
+document.addEventListener('touchstart', handleTouchStart);
+document.addEventListener('touchmove', handleTouchMove);
+document.addEventListener('touchend', handleTouchEnd);
+
+</script>
   
 
 
