--- a/demo1.html
+++ b/demo1.html
@@ -27,6 +27,9 @@
     .search-main{
       padding: 0 !important;
     }
+    .search-main .filter-area  button{
+   font-size: 10px !important;
+}
 
     @media (max-width:700px) {
        .filter-button-m-n  {
@@ -39,6 +42,7 @@
         padding: 0 !important;
        }
     }
+
    </style>
 </head>
 
@@ -284,12 +288,12 @@ background: #FFF;" type="button" data-bs-toggle="dropdown" aria-expanded="false"
                   <img src="img/truck-long-term.svg" alt=""> Long Term
                 </button>    
                 </div>
+              <button id="scroll-next" class="scroll-next">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" viewBox="0 0 18 12" fill="none">
+                    <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41422 0.585786 6.75 1 6.75L1 5.25ZM17 6.75C17.4142 6.75 17.75 6.41421 17.75 6C17.75 5.58579 17.4142 5.25 17 5.25V6.75ZM13.528 0.467309C13.2338 0.175726 12.7589 0.177844 12.4673 0.472041C12.1757 0.766238 12.1778 1.24111 12.472 1.53269L13.528 0.467309ZM14.763 2.74731L14.235 3.28L14.763 2.74731ZM14.763 9.25269L15.2909 9.78538L14.763 9.25269ZM12.472 10.4673C12.1778 10.7589 12.1757 11.2338 12.4673 11.528C12.7589 11.8222 13.2338 11.8243 13.528 11.5327L12.472 10.4673ZM16.9801 5.68667L17.7241 5.59184V5.59184L16.9801 5.68667ZM16.9801 6.31333L17.7241 6.40816V6.40816L16.9801 6.31333ZM1 6.75L17 6.75V5.25L1 5.25L1 6.75ZM12.472 1.53269L14.235 3.28L15.2909 2.21462L13.528 0.467309L12.472 1.53269ZM14.235 8.72L12.472 10.4673L13.528 11.5327L15.2909 9.78538L14.235 8.72ZM14.235 3.28C14.9505 3.98914 15.4413 4.47718 15.7734 4.8907C16.096 5.2924 16.2067 5.55042 16.2361 5.7815L17.7241 5.59184C17.6453 4.97372 17.3504 4.45878 16.9429 3.95146C16.545 3.45597 15.9814 2.89892 15.2909 2.21462L14.235 3.28ZM15.2909 9.78538C15.9814 9.10108 16.545 8.54403 16.9429 8.04854C17.3504 7.54121 17.6453 7.02628 17.7241 6.40816L16.2361 6.2185C16.2067 6.44958 16.096 6.7076 15.7734 7.10929C15.4413 7.52282 14.9505 8.01086 14.235 8.72L15.2909 9.78538ZM16.2361 5.7815C16.2546 5.92659 16.2546 6.07341 16.2361 6.2185L17.7241 6.40816C17.7586 6.13714 17.7586 5.86286 17.7241 5.59184L16.2361 5.7815Z" fill="#B4B4B4"/>
+                </svg>
+            </button>
             </div>
-          <button id="scroll-next" class="scroll-next">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" viewBox="0 0 18 12" fill="none">
-                <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41422 0.585786 6.75 1 6.75L1 5.25ZM17 6.75C17.4142 6.75 17.75 6.41421 17.75 6C17.75 5.58579 17.4142 5.25 17 5.25V6.75ZM13.528 0.467309C13.2338 0.175726 12.7589 0.177844 12.4673 0.472041C12.1757 0.766238 12.1778 1.24111 12.472 1.53269L13.528 0.467309ZM14.763 2.74731L14.235 3.28L14.763 2.74731ZM14.763 9.25269L15.2909 9.78538L14.763 9.25269ZM12.472 10.4673C12.1778 10.7589 12.1757 11.2338 12.4673 11.528C12.7589 11.8222 13.2338 11.8243 13.528 11.5327L12.472 10.4673ZM16.9801 5.68667L17.7241 5.59184V5.59184L16.9801 5.68667ZM16.9801 6.31333L17.7241 6.40816V6.40816L16.9801 6.31333ZM1 6.75L17 6.75V5.25L1 5.25L1 6.75ZM12.472 1.53269L14.235 3.28L15.2909 2.21462L13.528 0.467309L12.472 1.53269ZM14.235 8.72L12.472 10.4673L13.528 11.5327L15.2909 9.78538L14.235 8.72ZM14.235 3.28C14.9505 3.98914 15.4413 4.47718 15.7734 4.8907C16.096 5.2924 16.2067 5.55042 16.2361 5.7815L17.7241 5.59184C17.6453 4.97372 17.3504 4.45878 16.9429 3.95146C16.545 3.45597 15.9814 2.89892 15.2909 2.21462L14.235 3.28ZM15.2909 9.78538C15.9814 9.10108 16.545 8.54403 16.9429 8.04854C17.3504 7.54121 17.6453 7.02628 17.7241 6.40816L16.2361 6.2185C16.2067 6.44958 16.096 6.7076 15.7734 7.10929C15.4413 7.52282 14.9505 8.01086 14.235 8.72L15.2909 9.78538ZM16.2361 5.7815C16.2546 5.92659 16.2546 6.07341 16.2361 6.2185L17.7241 6.40816C17.7586 6.13714 17.7586 5.86286 17.7241 5.59184L16.2361 5.7815Z" fill="#B4B4B4"/>
-            </svg>
-        </button>
         </div>
         </div>
          <div class="m-auto">
@@ -605,67 +609,8 @@ window.addEventListener("scroll", function () {
       behavior: 'smooth'
     });
 
-    // Toggle scroll button visibility after changing map size
-    setTimeout(toggleScrollButtonVisibility, 1000); // Adjust timeout as needed
+   
   }
-
-// Function to toggle the visibility of the scroll buttons based on overflow and position
-function toggleScrollButtonVisibility() {
-  const filterMenu = document.querySelector('.filter-menu');
-  const scrollNextButton = document.getElementById('scroll-next');
-  const scrollBackButton = document.getElementById('scroll-back');
-
-  // Calculate if content overflows horizontally
-  const isOverflowing = filterMenu.scrollWidth > filterMenu.clientWidth;
-
-  // Calculate if we are at the end or beginning of the scroll
-  const isAtEnd = Math.ceil(filterMenu.scrollLeft + filterMenu.clientWidth) >= filterMenu.scrollWidth;
-  const isAtStart = filterMenu.scrollLeft <= 0;
-
-  // Log for debugging
-  console.log('Overflow:', isOverflowing, 'At Start:', isAtStart, 'At End:', isAtEnd);
-
-  // Show or hide the "scroll-next" button
-  scrollNextButton.style.display = (isOverflowing && !isAtEnd) ? 'block' : 'none';
-
-  // Show or hide the "scroll-back" button
-  scrollBackButton.style.display = (isOverflowing && !isAtStart) ? 'block' : 'none';
-}
-
-// Event listener for the scroll-next button click
-document.getElementById('scroll-next').addEventListener('click', function() {
-  const filterMenu = document.querySelector('.filter-menu');
-  filterMenu.scrollBy({
-    left: 150,
-    behavior: 'smooth'
-  });
-
-  // Use requestAnimationFrame for better visibility update
-  requestAnimationFrame(toggleScrollButtonVisibility);
-});
-
-// Event listener for the scroll-back button click
-document.getElementById('scroll-back').addEventListener('click', function() {
-  const filterMenu = document.querySelector('.filter-menu');
-  filterMenu.scrollBy({
-    left: -150,
-    behavior: 'smooth'
-  });
-
-  // Use requestAnimationFrame for better visibility update
-  requestAnimationFrame(toggleScrollButtonVisibility);
-});
-
-// Initial check and update on page load
-window.addEventListener('load', toggleScrollButtonVisibility);
-
-// Re-check and update on resize
-window.addEventListener('resize', toggleScrollButtonVisibility);
-
-// Re-check and update on scroll for real-time feedback
-document.querySelector('.filter-menu').addEventListener('scroll', () => {
-  requestAnimationFrame(toggleScrollButtonVisibility);
-});
 
 </script>
 
@@ -715,11 +660,13 @@ function handleTouchMove(event) {
 document.addEventListener('scroll', function () {
     // Calculate 70% of the viewport height
     const seventyVh = window.innerHeight * 0.1;
-
+  
     // Check the scroll position
     if (window.scrollY > seventyVh) {
+      if (window.innerWidth < 700) {
         // Set the transform if scrolled more than 70vh
         leftMap.style.transform = 'translateY(8vh)';
+    }
     }
 });
 
@@ -741,6 +688,8 @@ addEventListeners();
 window.addEventListener('resize', addEventListeners);
 
 </script>
+
+
 </body>
 
 </html>
