--- a/dashBoard/calander-availability.html
+++ b/dashBoard/calander-availability.html
@@ -71,7 +71,7 @@
   aria-labelledby="exampleModalScrollableTitle" style="display: none;" aria-hidden="true">
   <div class="modal-dialog ">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header modal-header-m-flex-c">
         <b>Connect to another website</b>
         <p class="dashboard-font-12">Connect other calendars you use and we’ll automatically keep this listing’s availability up-to-date. If this is your first time, please visit our Help Center.
         </p>
