--- a/dashBoard/dashBoardMain.html
+++ b/dashBoard/dashBoardMain.html
@@ -11,120 +11,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="../css/s-custom.css">
-  <link rel="stylesheet" href="../css/scrollbar.css">
   <link rel="stylesheet" href="../css/fonts.css">
-  <link rel="stylesheet" href="../css/message.css">
   <link rel="stylesheet" href="../css/dashboard.css">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-  <style>
-    /* dashboard header */
-    #dashboardHeader {
-      position: sticky;
-      top: 0px;
-      background-color: white;
-    }
-
-    #dashboardHeader header {
-      margin-top: 0px !important;
-    }
-
-    /* dashboard main body */
-    .dashboard-main {
-      display: flex;
-      align-items: start;
-      gap: 1rem;
-      min-height: 80vh;
-      max-width: 1450px;
-      margin-top: 1rem;
-    }
-
-    .dashboard-right {
-      width: 400px;
-      position: sticky;
-      top: 100px;
-    }
-    #mainList{
-    display: flex;
-    flex-direction: column;
-    margin: 0 10%;
-    }
-
-    .dashboard-left {
-      width: 100%;
-    }
-
-    .page {
-      display: none;
-    }
-    .nav-bar-listing-details{
-      height: 0px;
-      overflow: hidden;
-      transition: all 1s ease;
-      border-radius: 0;
-      margin-left: 1rem;
-      padding: 4px 24px !important;
-    }
-    .list-group-item {
-      border: none !important;
-      border-left: 5px solid white !important;
-      transition: all .5s ease-in-out;
-      width: max-content;
-    }
-    .dashBoard-page-nav-active .nav-bar-listing-details {
-      height: auto;
-    }
-    .page.dashBoard-page-active {
-      display: block;
-    }
-    
-    .list-group-item.active {
-    z-index: 2;
-    color: #0D99FF;
-    background-color: inherit;
-    border-color: inherit;
-    border-left: 5px solid #0D99FF !important;
-}
-    .nested-list {
-      display: none;
-      padding-left: 10px;
-      border-left: 2px solid transparent;
-    }
-    .nested-list-item {
-      cursor: pointer;
-      padding: 5px;
-      border: none;
-      background: none;
-    }
-
-    .nested-list-item:hover {
-      background-color: #f0f0f0;
-    }
-
-    /* Style for active navbar item */
-    .dashBoard-page-nav-active .dashBoard-page-nav {
-     background: #FAFAFA;
-    }
-    .dashBoard-page-nav {
-      cursor: pointer;
-      border-radius: 12px;
-      display: flex;
-      height: 48px;
-      padding: 0px 24px;
-      align-items: center;
-      gap: 2px;
-      align-self: stretch;
-      margin: 0 !important;
-    }
-    .dashboard-right .dashBoard-page-nav-active p {
-     color: var(--Grayscale-Gray-80, #4B4B4D) !important;
-    }
-    .list-group-item + .list-group-item.active {
-      margin-top: 0px !important;
-     
-    }
-  </style>
 </head>
 
 <body>
@@ -170,12 +61,13 @@
         </div>
       </div>
     </div>
+
     <div class="dashboard-left">
       <div id="page1" class="page dashBoard-page-active">
         <div id="listing-details-photo"></div>
       </div>
       <div id="page2" class="page">
-        <div id="pricingapi1"></div>
+        <div id="pricingapi"></div>
       </div>
       <div id="page3" class="page">
          <div id="rulesAndPolices"></div>
