--- a/dashBoard/mobile/myplacepage1.html
+++ b/dashBoard/mobile/myplacepage1.html
@@ -78,19 +78,17 @@
 
   <section class="mb-5">
     <section class=" mt-2">
-      <div class="d-flex justify-content-between align-items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-          <path d="M15 18L9 12L15 6" stroke="#090A0A" stroke-width="1.5" stroke-linecap="round"
-            stroke-linejoin="round" />
-        </svg>
-        <p class=" m-auto px-3 personalinfor-header-1" style="color: #090A0A; padding: 12px;">Listing name</p>
+      <div class="dashboard-mobile-header">
+        <a href="../myplacepage2.html" class="">
+          <img src="../../../img/arrow_back.svg" alt="">
+          </a>
+        <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Listing name</p>
       </div>
 
       <div class="main">
         <div class="">
           <p class="mobile-profile-font-1 py-3 mb-0  px-3" style="background: #fafafa;">Management</p>
-          <p class="mobile-profile-font-1 py-3 mb-0  px-3" style="background: #fafafa;">Listing Information</p>
-
+        <a style="text-decoration: none;" href="../booking.html">
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
             <div class="d-flex gap-2 align-items-center ">
               <img src="../../img/bag2.svg" alt="">
@@ -98,7 +96,9 @@
             </div>
             <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
           </div>
+        </a>
 
+         <a style="text-decoration: none;" href="../booking.html">
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
             <div class="d-flex gap-2 align-items-center ">
               <img src="../../img/Calender 1.svg" alt="">
@@ -106,6 +106,7 @@
             </div>
             <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
           </div>
+         </a>
 
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
             <div class="d-flex gap-2 align-items-center ">
